# orion

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  lcov.info  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.release.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
crates/orion-core/: Cargo.toml
crates/orion-core/src/: app.rs  config.rs  flag_codec.rs  flags.rs  flags_application.rs  flags_renderer.rs  flappy.rs  flappy_application.rs  flappy_renderer.rs  font.rs  game2048.rs  game2048_application.rs  game2048_renderer.rs  input.rs  launcher.rs  lib.rs  mario.rs  mario_application.rs  mario_renderer.rs  melody.rs  pomodoro.rs  pomodoro_application.rs  pomodoro_renderer.rs  pomodoro_store.rs  render.rs  rng.rs  snake.rs  snake_application.rs  snake_renderer.rs  speaker.rs  store.rs  tetris.rs  tetris_application.rs  tetris_renderer.rs  theme.rs  ui_widgets.rs  weather.rs
crates/orion-firmware/: Cargo.toml  build.rs
crates/orion-firmware/orion_app_main/: CMakeLists.txt  app_main_stub.c  bindings.h  wifi_shim.c
crates/orion-firmware/src/: display.rs  encoder.rs  esp_rng.rs  hardware.rs  joystick.rs  main.rs  network.rs  nvs_store.rs  pomodoro_nvs_store.rs  runtime.rs  speaker.rs
main/: flags.rle
tools/: generate_flags_assets.py
