[workspace]
members = [
    "crates/orion-core",
    "crates/orion-firmware",
]
default-members = ["crates/orion-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
strip = "debuginfo"
panic = "abort"
