[package]
name = "orion-firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "orion-firmware"
path = "src/main.rs"

[dependencies]
orion-core = { path = "../orion-core" }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.37", features = ["binstart"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_components = [
    "pthread",
    "driver",
    "esp_adc",
    "esp_lcd",
    "esp_timer",
    "freertos",
    "nvs_flash",
    "orion_app_main",
]
extra_components = [
    { component_dirs = ["orion_app_main"], bindings_header = "orion_app_main/bindings.h" },
]
